# plain-simple

./: .gitmodules  LICENSE  README.cn  README.md
app/cmake/: CMakeLists.txt
app/misc/lualib-src/lua-gbk/: README  ldbcs.h
cmake/: CMakeLists.txt
cmake/inc/: common.cmake  internal_utils.cmake  version.rc.in
